--- a/index.html
+++ b/index.html
@@ -159,11 +159,16 @@
 		<footer>
 			<div>
 				<p lang="en">Web Studio</p>
-				<ul>
-					<li><p>г. Киев, пр-т Леси Украинки, 26</p></li>
-					<li>info@example.com</li>
-					<li>+38 099 111 11 11</li>
-				</ul>
+				<address>
+					г. Киев, пр-т Леси Украинки, 26
+					<br />
+					<a href="mailto:info@example.com"></a>
+					info@example.com
+					<br />
+					<a href="tel:+380991111111"></a>
+					+38 099 111 11 11
+					<br />
+				</address>
 			</div>
 			<div>
 				<p><b>Присоеденяйтесь</b></p>
