--- a/index.html
+++ b/index.html
@@ -162,11 +162,9 @@
 				<address>
 					г. Киев, пр-т Леси Украинки, 26
 					<br />
-					<a href="mailto:info@example.com"></a>
-					info@example.com
+					<a href="mailto:info@example.com">info@example.com</a>
 					<br />
-					<a href="tel:+380991111111"></a>
-					+38 099 111 11 11
+					<a href="tel:+380991111111">+38 099 111 11 11</a>
 					<br />
 				</address>
 			</div>
