--- a/index.html
+++ b/index.html
@@ -20,142 +20,144 @@
 				</ul>
 			</nav>
 		</header>
-		<section>
-			<h1>Эфективные решения для Вашего бизнеса</h1>
-			<a href="#">заказать услугу</a>
-		</section>
-		<section>
-			<!--Наши приемущества -->
-			<ul>
-				<li>
-					<img src="./images/antenna.svg" alt="антена" />
-					<h3>Внимание к деталям</h3>
-					<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-				</li>
-				<li>
-					<img src="./images/Vector.svg" alt="вектор" />
-					<h3>Пунктуальность</h3>
-					<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-				</li>
-				<li>
-					<img src="./images/diagram.svg" alt="диаграмма" />
-					<h3>Планирование</h3>
-					<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-				</li>
-				<li>
-					<img src="./images/Group.svg" alt="космонавт" />
-					<h3>Современные технологии</h3>
-					<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-				</li>
-			</ul>
-		</section>
-		<section>
-			<h2>Чем мы занимаемся</h2>
-			<ul>
-				<li>
-					<img src="./images/laptop.jpg" alt="ноутбук" />
-					<h3>Дескопные приложения</h3>
-				</li>
-				<li>
-					<img src="./images/phone.png" alt="мобильный телефон" />
-					<h3>Мобильные приложения</h3>
-				</li>
-				<li>
-					<img src="./images/monitor.jpg" alt="монитор" />
-					<h3>Дизайнерские решения</h3>
-				</li>
-			</ul>
-		</section>
-		<section>
-			<h2>Наша компанда</h2>
-			<ul>
-				<li>
-					<img src="./images/product-designer.jpg" alt="Николай Кучеренко" />
-					<h3>Николай Кучеренко</h3>
-					<p lang="en">Product designer</p>
-				</li>
-			</ul>
-			<ul>
-				<li><a href="#" aria-label="Ссылка Instagram"></a></li>
-				<li><a href="#" aria-label="Ссылка Twitter"></a></li>
-				<li><a href="#" aria-label="Ссылка Facebook"></a></li>
-				<li><a href="#" aria-label="Ссылка Linkedin"></a></li>
-			</ul>
-			<ul>
-				<li>
-					<img src="./images/frontend-developer.jpg" alt="Ольга Иванова" />
-					<h3>Ольга Иванова</h3>
-					<p lang="en">Frontend developer</p>
-				</li>
-			</ul>
-			<ul>
-				<li><a href="#" aria-label="Ссылка Instagram"></a></li>
-				<li><a href="#" aria-label="Ссылка Twitter"></a></li>
-				<li><a href="#" aria-label="Ссылка Facebook"></a></li>
-				<li><a href="#" aria-label="Ссылка Linkedin"></a></li>
-			</ul>
-			<ul>
-				<li>
-					<img src="./images/marketing.jpg" alt="Андрей Шевченко" />
-					<h3>Андрей Шевченко</h3>
-					<p lang="en">Marketing</p>
-				</li>
-			</ul>
-			<ul>
-				<li><a href="#" aria-label="Ссылка Instagram"></a></li>
-				<li><a href="#" aria-label="Ссылка Twitter"></a></li>
-				<li><a href="#" aria-label="Ссылка Facebook"></a></li>
-				<li><a href="#" aria-label="Ссылка Linkedin"></a></li>
-			</ul>
-			<ul>
-				<li>
-					<img src="./images/ui-designer.jpg" alt="Иван Николаев" />
-					<h3>Иван Николаев</h3>
-					<p lang="en">UI Designer</p>
-				</li>
-			</ul>
-			<ul>
-				<li><a href="#" aria-label="Ссылка Instagram"></a></li>
-				<li><a href="#" aria-label="Ссылка Twitter"></a></li>
-				<li><a href="#" aria-label="Ссылка Facebook"></a></li>
-				<li><a href="#" aria-label="Ссылка Linkedin"></a></li>
-			</ul>
-		</section>
-		<section>
-			<h2>Постоянные клиенты</h2>
-			<ul>
-				<li>
-					<a href="#">
-						<img src="./images/logo1.svg" alt="Логотип компании" />
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<img src="./images/logo2.svg" alt="Логотип компании" />
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<img src="./images/logo3.svg" alt="Логотип компании" />
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<img src="./images/logo4.svg" alt="Логотип компании" />
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<img src="./images/logo5.svg" alt="Логотип компании" />
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<img src="./images/logo6.svg" alt="Логотип компании" />
-					</a>
-				</li>
-			</ul>
-		</section>
+		<main>
+			<section>
+				<h1>Эфективные решения для Вашего бизнеса</h1>
+				<a href="#">заказать услугу</a>
+			</section>
+			<section>
+				<!--Наши приемущества -->
+				<ul>
+					<li>
+						<img src="./images/antenna.svg" alt="антена" />
+						<h3>Внимание к деталям</h3>
+						<p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+					</li>
+					<li>
+						<img src="./images/Vector.svg" alt="вектор" />
+						<h3>Пунктуальность</h3>
+						<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+					</li>
+					<li>
+						<img src="./images/diagram.svg" alt="диаграмма" />
+						<h3>Планирование</h3>
+						<p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+					</li>
+					<li>
+						<img src="./images/Group.svg" alt="космонавт" />
+						<h3>Современные технологии</h3>
+						<p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+					</li>
+				</ul>
+			</section>
+			<section>
+				<h2>Чем мы занимаемся</h2>
+				<ul>
+					<li>
+						<img src="./images/laptop.jpg" alt="ноутбук" />
+						<h3>Дескопные приложения</h3>
+					</li>
+					<li>
+						<img src="./images/phone.png" alt="мобильный телефон" />
+						<h3>Мобильные приложения</h3>
+					</li>
+					<li>
+						<img src="./images/monitor.jpg" alt="монитор" />
+						<h3>Дизайнерские решения</h3>
+					</li>
+				</ul>
+			</section>
+			<section>
+				<h2>Наша компанда</h2>
+				<ul>
+					<li>
+						<img src="./images/product-designer.jpg" alt="Николай Кучеренко" />
+						<h3>Николай Кучеренко</h3>
+						<p lang="en">Product designer</p>
+					</li>
+				</ul>
+				<ul>
+					<li><a href="#" aria-label="Ссылка Instagram"></a></li>
+					<li><a href="#" aria-label="Ссылка Twitter"></a></li>
+					<li><a href="#" aria-label="Ссылка Facebook"></a></li>
+					<li><a href="#" aria-label="Ссылка Linkedin"></a></li>
+				</ul>
+				<ul>
+					<li>
+						<img src="./images/frontend-developer.jpg" alt="Ольга Иванова" />
+						<h3>Ольга Иванова</h3>
+						<p lang="en">Frontend developer</p>
+					</li>
+				</ul>
+				<ul>
+					<li><a href="#" aria-label="Ссылка Instagram"></a></li>
+					<li><a href="#" aria-label="Ссылка Twitter"></a></li>
+					<li><a href="#" aria-label="Ссылка Facebook"></a></li>
+					<li><a href="#" aria-label="Ссылка Linkedin"></a></li>
+				</ul>
+				<ul>
+					<li>
+						<img src="./images/marketing.jpg" alt="Андрей Шевченко" />
+						<h3>Андрей Шевченко</h3>
+						<p lang="en">Marketing</p>
+					</li>
+				</ul>
+				<ul>
+					<li><a href="#" aria-label="Ссылка Instagram"></a></li>
+					<li><a href="#" aria-label="Ссылка Twitter"></a></li>
+					<li><a href="#" aria-label="Ссылка Facebook"></a></li>
+					<li><a href="#" aria-label="Ссылка Linkedin"></a></li>
+				</ul>
+				<ul>
+					<li>
+						<img src="./images/ui-designer.jpg" alt="Иван Николаев" />
+						<h3>Иван Николаев</h3>
+						<p lang="en">UI Designer</p>
+					</li>
+				</ul>
+				<ul>
+					<li><a href="#" aria-label="Ссылка Instagram"></a></li>
+					<li><a href="#" aria-label="Ссылка Twitter"></a></li>
+					<li><a href="#" aria-label="Ссылка Facebook"></a></li>
+					<li><a href="#" aria-label="Ссылка Linkedin"></a></li>
+				</ul>
+			</section>
+			<section>
+				<h2>Постоянные клиенты</h2>
+				<ul>
+					<li>
+						<a href="#">
+							<img src="./images/logo1.svg" alt="Логотип компании" />
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="./images/logo2.svg" alt="Логотип компании" />
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="./images/logo3.svg" alt="Логотип компании" />
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="./images/logo4.svg" alt="Логотип компании" />
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="./images/logo5.svg" alt="Логотип компании" />
+						</a>
+					</li>
+					<li>
+						<a href="#">
+							<img src="./images/logo6.svg" alt="Логотип компании" />
+						</a>
+					</li>
+				</ul>
+			</section>
+		</main>
 		<footer>
 			<div>
 				<p lang="en">Web Studio</p>
